Completed first time deployment tutorial

--- a/src/less/main.less
+++ b/src/less/main.less
@@ -414,6 +414,10 @@ a, span.link {
   top: 16px;
 }
 
+.joyride-hole {
+  box-shadow: 0 0 0 9999px rgba(0,0,0,.25), 0 0 15px rgba(0,0,0,.25) !important;
+}
+
 
 .tooltip.info {
   position: absolute;
