--- a/src/less/main.less
+++ b/src/less/main.less
@@ -229,10 +229,10 @@ a, span.link {
 }
 
 #logo {
-  position:absolute;
+  display: block;
+  position: relative;
   left: 5px;
-  top: 5px;
-  width: 180px;
+  width: 170px;
   height: 48px;
   background-image: url('../assets/img/headerlogo.png');
   background-repeat: no-repeat;
@@ -240,12 +240,12 @@ a, span.link {
 }
 
 #demoBox {
-  border-style: dashed;
-  border-color: @alertpurple;
-  border-width: 2px;
-  padding: 4px 20px;
-  margin: 14px 0 14px 16%;
-  color: @alertpurple;
+  border-left: 1px solid @lightergrey;
+  padding: 4px 30px;
+  margin: 14px 0;
+  svg {
+    color: @linkgreen !important;
+  }
 }
 
 
