--- a/src/less/main.less
+++ b/src/less/main.less
@@ -1157,13 +1157,13 @@ td.no-click-cell {
 
 .fixedButtons {
   position: fixed;
-  bottom: 15px;
+  bottom: 30px;
   right: 30px;
-  padding-left: 30px;
+  padding: 15px 30px;
+  width: 100%;
   background-color: rgba(255,255,255,0.8);
   .animation(fadein 0.3s 1);
-  border-bottom-left-radius: 2px;
-  border-top-left-radius: 2px;
+  z-index: 1;
 }
 
 .top-right-button {
