--- a/src/less/main.less
+++ b/src/less/main.less
@@ -743,6 +743,14 @@ table thead.clickable tr>th:first-child {
     margin-right: 30px;
 }
 
+#device-inventory .report-list {
+    width: 45%;
+}
+
+.expandedButton {
+  margin-top: 12px;
+}
+
 .file-details {
   display: inline-block;
   width: 22%;
@@ -752,10 +760,6 @@ table thead.clickable tr>th:first-child {
   border: 1px solid @lightgrey;
 }
 
-.report-list div>span>div>div {
-  padding-top: 10px !important;
-  padding-bottom: 10px !important;
-}
 
 .listItem-link {
   float: right;
@@ -1121,7 +1125,7 @@ tr.expand {
     div.expanded {
       position: absolute;
       left: 0;
-      margin-top: 45px;
+      margin-top: 60px;
       padding: 0 45px 0 84px;
       right: 0;
     }
