fix removing group and adding new

--- a/src/less/main.less
+++ b/src/less/main.less
@@ -741,6 +741,7 @@ table thead.clickable tr>th:first-child {
     float: left;
     vertical-align: top;
     margin-right: 30px;
+    height: 70px;
 }
 
 #device-inventory .report-list {
