Renamed "accepted" to "all", removed counts from groups, added borderleft
Signed-off-by: Michael Clelland <michael.clelland@mender.io>

--- a/src/less/main.less
+++ b/src/less/main.less
@@ -350,9 +350,12 @@ a, span.link {
 }
 
 .rightFluid {
-  margin-left: 290px;
+  margin-left: 260px;
   padding-bottom: 30px;
+  padding-left: 30px;
   position: relative;
+  border-left: 1px solid @lightestgrey;
+  min-height: 75vh;
 }
 
 .tableActions {
