Fix loading spinner and updating of device status
Signed-off-by: Michael Clelland <michael.clelland@mender.io>

--- a/src/less/loader.less
+++ b/src/less/loader.less
@@ -99,6 +99,15 @@
 }
 
 
+.dialogLoaderContainer {
+  position: relative;
+  top: 20px;
+  .loader {
+    margin: auto;
+    .scale(0.5);
+  }
+}
+
 .waiting-loader {
   margin: 10px auto 0;
   display: inline;
