--- a/src/less/main.less
+++ b/src/less/main.less
@@ -391,6 +391,7 @@ a, span.link {
   width: 50%;
   display: inline-block;
   padding: 10px;
+  vertical-align: top;
 
   &.left-border {
     border-left: solid 1px @lightgrey;
