--- a/src/less/main.less
+++ b/src/less/main.less
@@ -369,14 +369,14 @@ a, span.link {
 
 .rightFluid {
   margin-left: 260px;
-  padding-bottom: 30px;
-  padding-left: 30px;
+  padding: 30px;
   position: relative;
   min-height: 75vh;
+  border-left: 1px solid @lightergrey;
 
   &.container {
     margin-left: 198px;
-    padding-top: 30px;
+    border-left: none;
     background-color: #ffffff;
   }
 }
@@ -1192,8 +1192,8 @@ td.no-click-cell {
 
 .top-right-button {
   position: absolute;
-  top: 3px;
-  right: 0;
+  top: 30px;
+  right: 30px;
 }
 
 .bottom-right-button {
@@ -1248,72 +1248,6 @@ td.no-click-cell {
 
 /* Dashboard */
 
-.leftDashboard {
-  width: 100%;
-  display: inline-block;
-  padding-right: 3%;
-  vertical-align: top;
-}
-
-.rightDashboard {
-  width: 29%;
-  display: inline-block;
-  border-left: 1px solid @lightgrey;
-  padding-left: 3%;
-  vertical-align: top;
-
-  .right {
-    height: 100%;
-  }
-}
-
-.health {
-  position: relative;
-  min-height: 250px;
-
-  .health-panel {
-    margin: 15px 0;
-    padding: 5% 5% 13%;
-    min-height: 100px;
-    border-radius: 4px;
-    border: 1px solid @lightergrey;
-
-    a {
-      margin-top: 5%;
-    }
-  }
-
-  .health-icon {
-    width: 33%;
-    display: inline-block;
-
-    img {
-      display: block;
-      margin: auto;
-    }
-  }
-
-  .health-text {
-    width: 66%;
-    text-align: center;
-    display: inline-block;
-
-    span {
-      font-size: 20px;
-      vertical-align: text-top;
-      font-size: 16px;
-    }
-
-    .number {
-      font-size: 4vw;
-      font-weight: bold;
-      position: relative;
-      display: block;
-    }
-  }
-
-}
-
 .dashboard-placeholder {
   font-size: 16px;
   color: @grey;
@@ -1324,56 +1258,6 @@ td.no-click-cell {
   img {
     margin-top: 15px;
     width: 74px;
-  }
-}
-
-.activityWrapper {
-  margin-bottom: 30px;
-  position: relative;
-
-  .activityEntry {
-    padding: 1px 12px 0.5em;
-    background-color: @alertgreen;
-    color: #E0E0E0;
-    position: relative;
-
-    p.summary {
-      color: @lightestgrey;
-    }
-
-    &:after {
-      content:"";
-      width:0;
-      height:0;
-      position: absolute;
-      z-index:-1;
-      bottom:-9px;
-      left:10px;
-      border-bottom:10px solid transparent;
-      border-left:10px solid @alertgreen;
-    }
-
-     &.negative {
-      background-color: @alertpurple;
-      &:after {
-         border-left:10px solid @alertpurple;
-      }
-    }
-  }
-
-  .activityTime {
-    color: @grey;
-    position: relative;
-    top: 12px;
-  }
-}
-
-.activityEntry {
-  cursor: pointer;
-  .opacity(0.9);
-  &:hover {
-    .scale(1.005);
-    .opacity(1);
   }
 }
 
