Added authset pop up WIP
Signed-off-by: Michael Clelland <michael.clelland@mender.io>

--- a/src/less/main.less
+++ b/src/less/main.less
@@ -37,6 +37,10 @@ body {
   color: @red;
 }
 
+.text-color {
+  color: @text!important;
+}
+
 .warning {
   color: rgb(171, 16, 0) !important;
   font-size: 14px !important;
@@ -74,6 +78,18 @@ a.warning:hover {
 ul.unstyled {
   list-style: none;
   padding-left: 0;
+}
+
+.auto {
+  display: block;
+  margin: auto;
+}
+
+
+/* icon */
+
+.pending-icon {
+  background-image: url('../assets/img/pending_status.png');
 }
 
 
@@ -887,6 +903,17 @@ table thead.clickable tr>th:first-child {
     height: 70px;
 }
 
+.list-horizontal-display {
+  overflow: hidden;
+}
+
+#device-identity.report-list.bordered,
+#device-inventory.report-list.bordered {
+  border: 1px solid @lightgrey;
+  margin-top: 10px;
+  padding: 5px 20px;
+}
+
 .list-horizontal-display > div >span.key > div > div > div {
   -webkit-line-clamp: 10!important;
   height: auto!important;
@@ -1256,7 +1283,7 @@ tr.expand {
       position: absolute;
       left: 0;
       margin-top: 60px;
-      padding: 0 45px 0 84px;
+      padding: 0 45px 0 24px;
       right: 0;
     }
 
