Action buttons in authset tables WIP
Signed-off-by: Michael Clelland <michael.clelland@mender.io>

--- a/src/less/main.less
+++ b/src/less/main.less
@@ -1327,6 +1327,12 @@ td.no-click-cell {
 }
 
 
+/* device auth */
+.actionButtons > span, 
+.actionButtons > a {
+  margin-right: 20px;
+}
+
 
 /* Buttons */
 
