--- a/src/less/main.less
+++ b/src/less/main.less
@@ -546,7 +546,7 @@ ul.link-list {
   padding: 30px 15px;
   border-style: dashed;
   border-color: @placeholder;
-  border-width: 1px;
+  border-width: 2px;
   text-align: center;
   position: relative;
   background-color: inherit;
@@ -554,6 +554,10 @@ ul.link-list {
   p {
     margin-top: 0;
     font-size: 1.25em;
+  }
+
+  &.widget p {
+    font-size: inherit;
   }
 
 }
@@ -615,10 +619,18 @@ ul.link-list {
     flex-direction: column;
     justify-content: center;
     margin: 0 3vw 3vw 0;
-    height: 175px;
+    height: 180px;
     width: 250px;
     position: relative;
-    padding: 1vw
+    padding: 1vw;
+    transition: all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms;
+    &.notActive:hover {
+      box-shadow: rgba(0, 0, 0, 0.1) 0px 0px 3px, rgba(0, 0, 0, 0.1) 0px 1px 3px;
+    }
+    &.onboard:hover {
+      border-color: darken(@placeholder, 10%);
+    }
+
   }
   .widgetHeader, .widgetMainContent, .widgetFooter {
     width: 100%;
@@ -637,20 +649,18 @@ ul.link-list {
     font-weight: normal;
   }
   .widgetMainContent {
-    padding: 10px 0;
+    padding: 10px 15px;
     align-items: center;
     flex-grow: 1;
     .header {
-      color: @verylightgrey;
       margin-bottom: 1pt;
-      font-weight: bolder;
     }
     .counter {
       font-size: xx-large;
     }
   }
   .link {
-    font-size: medium;
+    font-size: small;
   }
 }
 
@@ -827,7 +837,7 @@ ul.rc-pagination {
 
 .widget {
   width: 50%;
-  min-height: 200px;
+  min-height: 175px;
   float: left;
   padding: 22px 4% 22px;
   margin: 0 15px 30px;
@@ -1509,6 +1519,11 @@ span.month, span.day {
   .dashboard-number {
     margin-left: 10px;
     color: @grey;
+  }
+
+  svg {
+    vertical-align: middle;
+    margin: 0px 10px 4px 0;
   }
 }
 
