Updated Help pages with new structure and content for Update Modules Changelog: Title
Signed-off-by: Michael Clelland <michael.clelland@mender.io>

--- a/src/less/main.less
+++ b/src/less/main.less
@@ -1119,7 +1119,7 @@ table thead.clickable tr > th:first-child {
   border: 1px solid @lightgrey;
   background-color: @lightestgrey;
   border-radius: 4px;
-  padding: 24px;
+  padding: 24px 14px 20px 24px;
   max-height: 43vh;
   overflow-y: auto;
   position: relative;
