WIP first wizard screen done
Signed-off-by: Michael Clelland <michael.clelland@mender.io>

--- a/src/less/main.less
+++ b/src/less/main.less
@@ -1287,9 +1287,20 @@ input[required]:-moz-ui-invalid {
 }
 
 p.info {
-  margin: 20px 0;
+  margin: 15px 0;
   color: rgba(66, 66, 66, 0.6);
+
+  &.icon {
+    position: relative;
+    padding-left: 30px;
+  
+    svg {
+      position: absolute;
+      left: 0;
+    }
+  }
 }
+
 
 form .required::after {
   content: '* required';
